--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
-    "mongoose-aggregate-paginate-v2": "^1.1.2"
+    "mongoose-aggregate-paginate-v2": "^1.1.2",
+    "nodemailer": "^6.9.16"
   }
 }
