--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "validator": "^13.12.0",
+    "xss": "^1.0.15"
   }
 }
